# github-to-s3

./: .gitignore  Cargo.toml
src/: config.rs  main.rs  s3.rs
