[package]
name = "github-to-s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.18.2"
flate2 = "1.0.28"
tar = "0.4.40"
rust-s3 = "0.33.0"
lazy_static = "1.4.0"
dotenv = "0.15.0"
anyhow = "1.0.80"
